--- a/index.html
+++ b/index.html
@@ -84,9 +84,28 @@
         </span>
       </div>
       <div class="fonts" id="font-options">
-        <span class="font san-serif active">Sans serif</span>
-        <span class="font mono">Mono</span>
-        <span class="font serif">Serif</span>
+        <span class="options">
+          <span class="font san-serif active">Sans serif</span>
+          <span class="font mono">Mono</span>
+          <span class="font serif">Serif</span>
+        </span>
+        <span class="image-option image">
+          <span class="status"></span>
+          <span class="option text">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M8.15552 15.45C8.15552 15.0357 8.4913 14.7 8.90552 14.7H14.3055C14.7197 14.7 15.0555 15.0357 15.0555 15.45C15.0555 15.8642 14.7197 16.2 14.3055 16.2H8.90552C8.4913 16.2 8.15552 15.8642 8.15552 15.45Z" fill="currentColor" />
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M8.15454 11.4386C8.15454 11.0244 8.49033 10.6886 8.90454 10.6886H12.2605C12.6748 10.6886 13.0105 11.0244 13.0105 11.4386C13.0105 11.8528 12.6748 12.1886 12.2605 12.1886H8.90454C8.49033 12.1886 8.15454 11.8528 8.15454 11.4386Z" fill="currentColor" />
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M4.93052 4.27249C6.46237 2.58293 8.83824 2 12.0399 2C12.9666 2 13.8214 2.05142 14.5917 2.15694C14.7477 2.17832 14.8931 2.24827 15.0071 2.3569L20.6771 7.7569C20.7923 7.86656 20.8696 8.00998 20.8979 8.16645C21.0983 9.27377 21.1899 10.5511 21.1899 12C21.1899 15.4998 20.6712 18.0653 19.1576 19.7318C17.6242 21.42 15.2455 22 12.0399 22C8.83897 22 6.46283 21.4199 4.93074 19.7315C3.41862 18.0651 2.8999 15.4999 2.8999 12C2.8999 8.5048 3.41874 5.93992 4.93052 4.27249ZM6.04178 5.28001C4.93107 6.50508 4.3999 8.5652 4.3999 12C4.3999 15.4401 4.93118 17.4999 6.04156 18.7235C7.13197 19.9251 8.95083 20.5 12.0399 20.5C15.1343 20.5 16.9557 19.925 18.0472 18.7232C19.1586 17.4997 19.6899 15.4402 19.6899 12C19.6899 10.7185 19.6149 9.61383 19.4626 8.67165L14.1509 3.61282C13.52 3.53823 12.8146 3.5 12.0399 3.5C8.95156 3.5 7.13244 4.07707 6.04178 5.28001Z" fill="currentColor" />
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M13.9343 2.08264C14.3485 2.08264 14.6843 2.41843 14.6843 2.83264V5.49364C14.6843 6.93714 15.8542 8.10664 17.2983 8.10664H20.2493C20.6635 8.10664 20.9993 8.44243 20.9993 8.85664C20.9993 9.27086 20.6635 9.60664 20.2493 9.60664H17.2983C15.0264 9.60664 13.1843 7.76615 13.1843 5.49364V2.83264C13.1843 2.41843 13.5201 2.08264 13.9343 2.08264Z" fill="currentColor" />
+            </svg>
+          </span>
+          <span class="option image">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M8.83693 11.2946C7.45193 11.2946 6.32593 10.1696 6.32593 8.78456C6.32593 7.39956 7.45193 6.27356 8.83693 6.27356C10.2219 6.27356 11.3479 7.39956 11.3479 8.78456C11.3479 10.1696 10.2219 11.2946 8.83693 11.2946ZM8.83693 7.77356C8.27893 7.77356 7.82593 8.22656 7.82593 8.78456C7.82593 9.34156 8.27893 9.79456 8.83693 9.79456C9.39493 9.79456 9.84793 9.34156 9.84793 8.78456C9.84793 8.22656 9.39493 7.77356 8.83693 7.77356Z" fill="currentColor" />
+              <path fill-rule="evenodd" clip-rule="evenodd"  d="M21.8671 14.6037C21.9572 13.8108 22 12.9444 22 12.0001C22 4.61712 19.383 2.00012 12 2.00012C4.617 2.00012 2 4.61712 2 12.0001C2 19.3831 4.617 22.0001 12 22.0001C18.3151 22.0001 21.1432 20.0855 21.8292 14.9113C21.8632 14.8121 21.8758 14.7071 21.8671 14.6037ZM12 3.50012C5.486 3.50012 3.5 5.48612 3.5 12.0001C3.5 14.3388 3.75598 16.0938 4.38559 17.3828C4.94241 16.4129 5.83627 15.1386 6.90781 14.6351C8.02881 14.1101 8.92881 14.4331 9.79981 14.7461L9.80242 14.7471C10.4466 14.9788 11.1121 15.2181 12.0288 15.2181C12.7368 15.2181 13.1428 14.5861 13.7458 13.5551C14.3648 12.4961 15.1348 11.1801 16.7038 11.1801C18.4161 11.1801 19.6132 12.035 20.4866 12.8881C20.4956 12.6019 20.5 12.306 20.5 12.0001C20.5 5.48612 18.514 3.50012 12 3.50012ZM20.3202 14.909C20.267 14.8503 20.2125 14.7894 20.1566 14.727L20.145 14.714C19.3313 13.8074 18.3196 12.6801 16.7038 12.6801C16.0288 12.6801 15.6328 13.3001 15.0408 14.3121C14.4139 15.384 13.6336 16.7181 12.0288 16.7181C10.8504 16.7181 9.98812 16.4079 9.2936 16.1581L9.29081 16.1571C8.46681 15.8591 8.07981 15.7401 7.54681 15.9921C6.74958 16.3669 5.86354 17.7328 5.35679 18.7416C6.67131 20.016 8.78372 20.5001 12 20.5001C17.4209 20.5001 19.7059 19.1248 20.3202 14.909Z" fill="currentColor" />
+            </svg>
+          </span>
+        </span>
       </div>
       <div id="content" class="content">
         <div class="intro">
@@ -196,17 +215,36 @@
     <section class="side">Side</section>
   </main>
   <script>
-    window.addEventListener('scroll', () => {
-      const fontOptions = document.querySelector('#font-options');
+    document.addEventListener('DOMContentLoaded', () => {
+      window.addEventListener('scroll', () => {
+        const fontOptions = document.querySelector('#font-options');
 
-      if (fontOptions) {
-        const fontOptionsRect = fontOptions.getBoundingClientRect();
-        if (fontOptionsRect.top <= 70) {
-          fontOptions.classList.add('sticky');
+        if (fontOptions) {
+          const fontOptionsRect = fontOptions.getBoundingClientRect();
+          if (fontOptionsRect.top <= 70) {
+            fontOptions.classList.add('sticky');
+          }
+          else {
+            fontOptions.classList.remove('sticky');
+          }
         }
-        else {
-          fontOptions.classList.remove('sticky');
-        }
+      })
+
+      // Get Image text switcher
+
+      const imageSwitcher = document.querySelector('main.main > article.content .fonts > .image-option');
+
+      if (imageSwitcher) {
+        imageSwitcher.addEventListener('click', () => {
+          if (imageSwitcher.classList.contains('text')) {
+            imageSwitcher.classList.remove('text');
+            imageSwitcher.classList.add('image');
+          }
+          else {
+            imageSwitcher.classList.remove('image');
+            imageSwitcher.classList.add('text');
+          }
+        })
       }
     })
   </script>
