--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <span class="font mono">Mono</span>
           <span class="font serif">Serif</span>
         </span>
-        <span class="image-option image">
+        <span title="Toggle images" class="image-option image">
           <span class="status"></span>
           <span class="option text">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
