--- a/index.html
+++ b/index.html
@@ -238,31 +238,29 @@
           <a href="" class="topic">Ubuntu</a>
         </div>
         <div class="table-of-content">
-          <p class="text-foreground mb-4">On this page</p>
-          <div class="prose-toc">
-            <ul>
-              <li>
-                <a href="#why-use-a-vector-database-for-recommending-content">Why use a vector database for recommending
-                  content</a>
-                </li>
-              <li><a href="#what-we-will-build">What we will build</a></li>
-              <li><a href="#tools-technologies-used">Tools/ technologies used</a></li>
-              <li><a href="#creating-the-app">Creating the app</a>
-                <ul>
-                  <li><a href="#step-1-create-the-table">Step 1: Create the table</a></li>
-                  <li><a href="#step-2-get-movie-data">Step 2: Get movie data</a></li>
-                  <li><a href="#step-3-generate-embeddings">Step 3: Generate embeddings</a></li>
-                  <li><a href="#step-4-store-the-data-in-the-supabase-database">Step 4: Store the data in the Supabase
-                      database</a></li>
-                  <li><a href="#step-5-create-a-database-function-to-query-similar-movies">Step 5: Create a database function to
-                      query similar movies</a></li>
-                  <li><a href="#step-6-create-the-flutter-interface">Step 6: Create the Flutter interface</a></li>
-                </ul>
-              </li>
-              <li><a href="#afterthoughts">Afterthoughts</a></li>
-              <li><a href="#resources">Resources</a></li>
-            </ul>
-          </div>
+          <p class="title">On this page</p>
+          <ul class="list">
+            <li>
+              <a href="#why-use-a-vector-database-for-recommending-content">Why use a vector database for recommending
+                content</a>
+            </li>
+            <li><a href="#what-we-will-build">What we will build</a></li>
+            <li><a href="#tools-technologies-used">Tools/ technologies used</a></li>
+            <li><a href="#creating-the-app">Creating the app</a>
+              <ul class="inner-list">
+                <li><a href="#step-1-create-the-table">Step 1: Create the table</a></li>
+                <li><a href="#step-2-get-movie-data">Step 2: Get movie data</a></li>
+                <li><a href="#step-3-generate-embeddings">Step 3: Generate embeddings</a></li>
+                <li><a href="#step-4-store-the-data-in-the-supabase-database">Step 4: Store the data in the Supabase
+                    database</a></li>
+                <li><a href="#step-5-create-a-database-function-to-query-similar-movies">Step 5: Create a database function to
+                    query similar movies</a></li>
+                <li><a href="#step-6-create-the-flutter-interface">Step 6: Create the Flutter interface</a></li>
+              </ul>
+            </li>
+            <li><a href="#afterthoughts">Afterthoughts</a></li>
+            <li><a href="#resources">Resources</a></li>
+          </ul>
         </div>
       </div>
     </section>
