--- a/index.html
+++ b/index.html
@@ -217,6 +217,13 @@
               offers paid support if you’re using Ubuntu professionally.</p>
         </div>
       </div>
+      <div class="next-article">
+        <a href="" class="article">
+          <span class="title">Next article</span>
+          <span class="text">Behind the scenes of Vercel's infrastructure: Achieving optimal scalability and performance</span>
+          <span class="date">June 23, 2021 (3y ago)</span>
+        </a>
+      </div>
     </article>
     <section class="side">
       <div class="head">
@@ -261,6 +268,53 @@
             <li><a href="#afterthoughts">Afterthoughts</a></li>
             <li><a href="#resources">Resources</a></li>
           </ul>
+        </div>
+      </div>
+      <div class="related">
+        <p class="title">Related reading</p>
+        <div class="related-stories">
+          <div class="story">
+            <h4 class="title">
+              <a href="#">Framework-defined infrastructure</a>
+            </h4>
+            <div class="info">
+              <div class="author">
+                <div class="image">
+                  <img src="img/img.jpg" alt="Fredrick Ochieng" srcset="">
+                </div>
+                <p class="name"><a href="#">Fredrick Ochieng</a></p>
+              </div>
+              <span class="stats">576 views</span>
+            </div>
+          </div>
+          <div class="story">
+            <h4 class="title">
+              <a href="#">Behind the scenes of Vercel's infrastructure: Achieving optimal scalability and performance</a>
+            </h4>
+            <div class="info">
+              <div class="author">
+                <div class="image">
+                  <img src="img/img.jpg" alt="Fredrick Ochieng" srcset="">
+                </div>
+                <p class="name"><a href="#">Fredrick Ochieng</a></p>
+              </div>
+              <span class="stats">576 views</span>
+            </div>
+          </div>
+          <div class="story">
+            <h4 class="title">
+              <a href="#">Framework-defined infrastructure</a>
+            </h4>
+            <div class="info">
+              <div class="author">
+                <div class="image">
+                  <img src="img/img.jpg" alt="Fredrick Ochieng" srcset="">
+                </div>
+                <p class="name"><a href="#">Fredrick Ochieng</a></p>
+              </div>
+              <span class="stats">576 views</span>
+            </div>
+          </div>
         </div>
       </div>
     </section>
