--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog title</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="res.css">
 
   <meta name="description"
     content="If you’re looking for a Linux distribution, you’ve likely seen recommendations for..">
@@ -18,8 +19,21 @@
 
 <body>
   <header class="header">
+    <div class="nav">
+      <input type="checkbox" />
+      <svg>
+        <use xlink:href="#menu" />
+        <use xlink:href="#menu" />
+      </svg>
+    </div>
+    <!-- SVG -->
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+      <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 56" id="menu">
+        <path d="M48.33,45.6H18a14.17,14.17,0,0,1,0-28.34H78.86a17.37,17.37,0,0,1,0,34.74H42.33l-21-21.26L47.75,4" />
+      </symbol>
+    </svg>
+    <h2 class="site-name">avalQ</h2>
     <ul class="left">
-      <h2 class="site-name">avalQ</h2>
       <li class="link">
         <a href="" class="link-item">
           <span class="text">All</span>
