--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <h1 class="title">Making the Web. Faster.</h1>
         <span class="stats">
           <span class="date">June 23, 2021 (3y ago)</span>
+          <span class="dot"></span>
           <span class="views">54,916 views</span>
         </span>
       </div>
