--- a/index.html
+++ b/index.html
@@ -37,20 +37,92 @@
       <li class="link">
         <a href="" class="link-item">
           <span class="text">All</span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down"
-            viewBox="0 0 16 16">
-            <path fill-rule="evenodd"
-              d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+          <svg height="16" stroke-linejoin="round" viewBox="0 0 16 16" width="16" aria-hidden="true">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0607 6.74999L11.5303 7.28032L8.7071 10.1035C8.31657 10.4941 7.68341 10.4941 7.29288 10.1035L4.46966 7.28032L3.93933 6.74999L4.99999 5.68933L5.53032 6.21966L7.99999 8.68933L10.4697 6.21966L11 5.68933L12.0607 6.74999Z" fill="currentColor"></path>
           </svg>
         </a>
+        <div class="drop-down">
+          <ul class="main">
+            <h4 class="title">avalQ</h4>
+            <li class="item article">
+              <a href="" class="link">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M7.62573 15.6965C7.62573 15.2823 7.96152 14.9465 8.37573 14.9465H15.5957C16.0099 14.9465 16.3457 15.2823 16.3457 15.6965C16.3457 16.1107 16.0099 16.4465 15.5957 16.4465H8.37573C7.96152 16.4465 7.62573 16.1107 7.62573 15.6965Z"
+                    fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M7.62573 11.9368C7.62573 11.5226 7.96152 11.1868 8.37573 11.1868H15.5957C16.0099 11.1868 16.3457 11.5226 16.3457 11.9368C16.3457 12.351 16.0099 12.6868 15.5957 12.6868H8.37573C7.96152 12.6868 7.62573 12.351 7.62573 11.9368Z"
+                    fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M7.62598 8.17749C7.62598 7.76328 7.96176 7.42749 8.37598 7.42749H11.131C11.5452 7.42749 11.881 7.76328 11.881 8.17749C11.881 8.5917 11.5452 8.92749 11.131 8.92749H8.37598C7.96176 8.92749 7.62598 8.5917 7.62598 8.17749Z"
+                    fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M4.89011 4.26997C6.42204 2.58117 8.79844 2.00024 12.001 2.00024C15.204 2.00024 17.5804 2.58116 19.1123 4.26999C20.624 5.93673 21.142 8.50197 21.142 12.0002C21.142 15.4985 20.624 18.0638 19.1123 19.7305C17.5804 21.4193 15.204 22.0002 12.001 22.0002C8.79844 22.0002 6.42204 21.4193 4.89011 19.7305C3.37819 18.0638 2.85999 15.4986 2.85999 12.0002C2.85999 8.50191 3.37819 5.93669 4.89011 4.26997ZM6.00111 5.27777C4.89078 6.5018 4.35999 8.56158 4.35999 12.0002C4.35999 15.4389 4.89078 17.4987 6.00111 18.7227C7.09143 19.9247 8.91053 20.5002 12.001 20.5002C15.092 20.5002 16.911 19.9247 18.0012 18.7227C19.1114 17.4987 19.642 15.439 19.642 12.0002C19.642 8.56151 19.1114 6.50175 18.0012 5.27775C16.911 4.07583 15.092 3.50024 12.001 3.50024C8.91053 3.50024 7.09143 4.07582 6.00111 5.27777Z"
+                    fill="currentColor" />
+                </svg>
+                <span class="content">
+                  <h5 class="name">Articles</h5>
+                  <span class="text">View and create articles.</span>
+                </span>
+              </a>
+            </li>
+            <li class="item journal">
+              <a href="" class="link">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M8.15552 15.45C8.15552 15.0357 8.4913 14.7 8.90552 14.7H14.3055C14.7197 14.7 15.0555 15.0357 15.0555 15.45C15.0555 15.8642 14.7197 16.2 14.3055 16.2H8.90552C8.4913 16.2 8.15552 15.8642 8.15552 15.45Z" fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M8.15454 11.4386C8.15454 11.0244 8.49033 10.6886 8.90454 10.6886H12.2605C12.6748 10.6886 13.0105 11.0244 13.0105 11.4386C13.0105 11.8528 12.6748 12.1886 12.2605 12.1886H8.90454C8.49033 12.1886 8.15454 11.8528 8.15454 11.4386Z" fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M4.93052 4.27249C6.46237 2.58293 8.83824 2 12.0399 2C12.9666 2 13.8214 2.05142 14.5917 2.15694C14.7477 2.17832 14.8931 2.24827 15.0071 2.3569L20.6771 7.7569C20.7923 7.86656 20.8696 8.00998 20.8979 8.16645C21.0983 9.27377 21.1899 10.5511 21.1899 12C21.1899 15.4998 20.6712 18.0653 19.1576 19.7318C17.6242 21.42 15.2455 22 12.0399 22C8.83897 22 6.46283 21.4199 4.93074 19.7315C3.41862 18.0651 2.8999 15.4999 2.8999 12C2.8999 8.5048 3.41874 5.93992 4.93052 4.27249ZM6.04178 5.28001C4.93107 6.50508 4.3999 8.5652 4.3999 12C4.3999 15.4401 4.93118 17.4999 6.04156 18.7235C7.13197 19.9251 8.95083 20.5 12.0399 20.5C15.1343 20.5 16.9557 19.925 18.0472 18.7232C19.1586 17.4997 19.6899 15.4402 19.6899 12C19.6899 10.7185 19.6149 9.61383 19.4626 8.67165L14.1509 3.61282C13.52 3.53823 12.8146 3.5 12.0399 3.5C8.95156 3.5 7.13244 4.07707 6.04178 5.28001Z" fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M13.9343 2.08264C14.3485 2.08264 14.6843 2.41843 14.6843 2.83264V5.49364C14.6843 6.93714 15.8542 8.10664 17.2983 8.10664H20.2493C20.6635 8.10664 20.9993 8.44243 20.9993 8.85664C20.9993 9.27086 20.6635 9.60664 20.2493 9.60664H17.2983C15.0264 9.60664 13.1843 7.76615 13.1843 5.49364V2.83264C13.1843 2.41843 13.5201 2.08264 13.9343 2.08264Z" fill="currentColor" />
+                </svg>
+                <span class="content">
+                  <h5 class="name">Journals</h5>
+                  <span class="text">Add public journals</span>
+                </span>
+              </a>
+            </li>
+            <li class="item analytic">
+              <a href="" class="link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-activity"
+                  viewBox="0 0 16 16">
+                  <path fill-rule="evenodd"
+                    d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2" />
+                </svg>
+                <span class="content">
+                  <h5 class="name">Analytics</h5>
+                  <span class="text">View content performance</span>
+                </span>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="link">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M9.58012 12.0259H9.61012C12.4301 12.0259 14.7241 9.73187 14.7241 6.91087C14.7241 4.09087 12.4301 1.79688 9.61012 1.79688C6.79112 1.79688 4.49712 4.09088 4.49712 6.90788C4.49112 8.27087 5.01712 9.55287 5.97712 10.5199C6.93612 11.4849 8.21512 12.0209 9.58012 12.0259ZM5.99712 6.91088C5.99712 4.91788 7.61812 3.29688 9.61012 3.29688C11.6031 3.29688 13.2241 4.91788 13.2241 6.91088C13.2241 8.90388 11.6031 10.5259 9.61012 10.5259H9.58312C8.62112 10.5219 7.71812 10.1449 7.04212 9.46187C6.36412 8.77987 5.99312 7.87488 5.99712 6.91088Z"
+                    fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M2.05078 18.6743C2.05078 22.2033 7.54278 22.2033 9.60978 22.2033C11.4788 22.2033 17.1688 22.2033 17.1688 18.6543C17.1688 15.9673 13.7078 13.6963 9.60978 13.6963C5.51178 13.6963 2.05078 15.9753 2.05078 18.6743ZM3.55078 18.6743C3.55078 17.0323 6.14178 15.1963 9.60978 15.1963C13.0778 15.1963 15.6688 17.0213 15.6688 18.6543C15.6688 20.3473 12.3738 20.7033 9.60978 20.7033C5.58878 20.7033 3.55078 20.0203 3.55078 18.6743Z"
+                    fill="currentColor" />
+                  <path
+                    d="M16.8532 10.8261C16.5212 10.8261 16.2182 10.6051 16.1282 10.2691C16.0222 9.86909 16.2592 9.45909 16.6602 9.35109C17.7672 9.05509 18.5402 8.04809 18.5402 6.90009C18.5412 5.70009 17.6902 4.65409 16.5162 4.41309C16.1102 4.33009 15.8482 3.93309 15.9322 3.52809C16.0142 3.12209 16.4102 2.85609 16.8172 2.94409C18.6862 3.32809 20.0412 4.99209 20.0412 6.90009C20.0412 8.72509 18.8092 10.3301 17.0462 10.8011C16.9822 10.8181 16.9162 10.8261 16.8532 10.8261Z"
+                    fill="currentColor" />
+                  <path
+                    d="M18.9932 18.0196C19.0742 18.3646 19.3822 18.5976 19.7222 18.5976C19.7792 18.5976 19.8372 18.5916 19.8952 18.5776C21.0842 18.2976 21.9492 17.2986 21.9492 16.2016C21.9492 14.4746 19.8342 12.9016 17.5122 12.9016C17.0982 12.9016 16.7622 13.2376 16.7622 13.6516C16.7622 14.0656 17.0982 14.4016 17.5122 14.4016C19.1332 14.4016 20.4492 15.4916 20.4492 16.2016C20.4492 16.5486 20.1132 16.9856 19.5512 17.1176C19.1482 17.2116 18.8982 17.6166 18.9932 18.0196Z"
+                    fill="currentColor" />
+                </svg>
+                <span class="content">
+                  <h5 class="name">Authors</h5>
+                  <span class="text">Explore stories by authors</span>
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </li>
       <li class="link">
         <a href="" class="link-item">
           <span class="text">Docs</span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down"
-            viewBox="0 0 16 16">
-            <path fill-rule="evenodd"
-              d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+          <svg height="16" stroke-linejoin="round" viewBox="0 0 16 16" width="16" aria-hidden="true">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0607 6.74999L11.5303 7.28032L8.7071 10.1035C8.31657 10.4941 7.68341 10.4941 7.29288 10.1035L4.46966 7.28032L3.93933 6.74999L4.99999 5.68933L5.53032 6.21966L7.99999 8.68933L10.4697 6.21966L11 5.68933L12.0607 6.74999Z" fill="currentColor"></path>
           </svg>
         </a>
       </li>
