--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           </svg>
         </a>
         <div class="drop-down">
+          <span class="arrow"></span>
           <ul class="main">
             <h4 class="title">avalQ</h4>
             <li class="item article">
@@ -80,7 +81,7 @@
                 </span>
               </a>
             </li>
-            <li class="item analytic">
+            <li class="item icon">
               <a href="" class="link">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-activity"
                   viewBox="0 0 16 16">
@@ -112,6 +113,53 @@
                 <span class="content">
                   <h5 class="name">Authors</h5>
                   <span class="text">Explore stories by authors</span>
+                </span>
+              </a>
+            </li>
+          </ul>
+          <ul class="main">
+            <h4 class="title">Technologies</h4>
+            <li class="item article">
+              <a href="" class="link icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+                </svg>
+                <span class="content">
+                  <h5 class="name">Github</h5>
+                  <span class="text">Open source code.</span>
+                </span>
+              </a>
+            </li>
+            <li class="item supabase">
+              <a href="" class="link">
+                <svg width="109" height="113" viewBox="0 0 109 113" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M63.7076 110.284C60.8481 113.885 55.0502 111.912 54.9813 107.314L53.9738 40.0627L99.1935 40.0627C107.384 40.0627 111.952 49.5228 106.859 55.9374L63.7076 110.284Z"
+                    fill="url(#paint0_linear)" />
+                  <path
+                    d="M63.7076 110.284C60.8481 113.885 55.0502 111.912 54.9813 107.314L53.9738 40.0627L99.1935 40.0627C107.384 40.0627 111.952 49.5228 106.859 55.9374L63.7076 110.284Z"
+                    fill="url(#paint1_linear)" fill-opacity="0.2" />
+                  <path
+                    d="M45.317 2.07103C48.1765 -1.53037 53.9745 0.442937 54.0434 5.041L54.4849 72.2922H9.83113C1.64038 72.2922 -2.92775 62.8321 2.1655 56.4175L45.317 2.07103Z"
+                    fill="#3ECF8E" />
+                  <defs>
+                    <linearGradient id="paint0_linear" x1="53.9738" y1="54.974" x2="94.1635" y2="71.8295"
+                      gradientUnits="userSpaceOnUse">
+                      <stop stop-color="#249361" />
+                      <stop offset="1" stop-color="#3ECF8E" />
+                    </linearGradient>
+                    <linearGradient id="paint1_linear" x1="36.1558" y1="30.578" x2="54.4844" y2="65.0806"
+                      gradientUnits="userSpaceOnUse">
+                      <stop />
+                      <stop offset="1" stop-opacity="0" />
+                    </linearGradient>
+                  </defs>
+                </svg>
+                <span class="content">
+                  <h5 class="name">Supabase</h5>
+                  <span class="text">Try supabase</span>
                 </span>
               </a>
             </li>
