--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     </svg>
     <h2 class="site-name">avalQ</h2>
     <ul class="left">
-      <li class="link options-link active">
-        <a href="" class="link-item">
+      <li class="link options-link">
+        <span class="link-item">
           <span class="text">All</span>
           <svg height="16" stroke-linejoin="round" viewBox="0 0 16 16" width="16" aria-hidden="true">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0607 6.74999L11.5303 7.28032L8.7071 10.1035C8.31657 10.4941 7.68341 10.4941 7.29288 10.1035L4.46966 7.28032L3.93933 6.74999L4.99999 5.68933L5.53032 6.21966L7.99999 8.68933L10.4697 6.21966L11 5.68933L12.0607 6.74999Z" fill="currentColor"></path>
           </svg>
-        </a>
+        </span>
         <div class="drop-down">
           <span class="arrow"></span>
           <ul class="main">
@@ -167,14 +167,14 @@
         </div>
       </li>
       <li class="link articles options-link">
-        <a href="" class="link-item">
+        <span class="link-item">
           <span class="text">Articles</span>
           <svg height="16" stroke-linejoin="round" viewBox="0 0 16 16" width="16" aria-hidden="true">
             <path fill-rule="evenodd" clip-rule="evenodd"
               d="M12.0607 6.74999L11.5303 7.28032L8.7071 10.1035C8.31657 10.4941 7.68341 10.4941 7.29288 10.1035L4.46966 7.28032L3.93933 6.74999L4.99999 5.68933L5.53032 6.21966L7.99999 8.68933L10.4697 6.21966L11 5.68933L12.0607 6.74999Z"
               fill="currentColor"></path>
           </svg>
-        </a>
+        </span>
         <div class="drop-down">
           <span class="arrow"></span>
           <ul class="main">
@@ -281,12 +281,12 @@
         </div>
       </li>
       <li class="link options-link resources">
-        <a href="" class="link-item">
+        <span class="link-item">
           <span class="text">Resources</span>
           <svg height="16" stroke-linejoin="round" viewBox="0 0 16 16" width="16" aria-hidden="true">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0607 6.74999L11.5303 7.28032L8.7071 10.1035C8.31657 10.4941 7.68341 10.4941 7.29288 10.1035L4.46966 7.28032L3.93933 6.74999L4.99999 5.68933L5.53032 6.21966L7.99999 8.68933L10.4697 6.21966L11 5.68933L12.0607 6.74999Z" fill="currentColor"></path>
           </svg>
-        </a>
+        </span>
         <div class="drop-down">
           <span class="arrow"></span>
           <ul class="main">
