--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
     </svg>
     <h2 class="site-name">avalQ</h2>
     <ul class="left">
-      <li class="link options-link active">
+      <div class="account">
+        <a href="" class="login">Login</a>
+        <a href="" class="signup">Sign Up</a>
+      </div>
+      <li class="link options-link">
         <span class="link-item">
           <span class="text">All</span>
           <svg height="16" stroke-linejoin="round" viewBox="0 0 16 16" width="16" aria-hidden="true">
