--- a/index.html
+++ b/index.html
@@ -886,6 +886,30 @@
         })
       }
 
+      const mql = window.matchMedia('(max-width: 600px)');
+
+      if (mql.matches) {
+        const expandableHeaderLinks = document.querySelectorAll('header.header > ul > li.link.options-link');
+        let activeLink = document.querySelector('header.header > ul > li.link.options-link.active');
+        if (expandableHeaderLinks) {
+          expandableHeaderLinks.forEach(link => {
+            // const options = link.querySelector('div.drop-down');
+            link.addEventListener('click', event => {
+              event.preventDefault();
+              if (activeLink) {
+                activeLink.classList.toggle('active');
+              }
+              activeLink = link;
+              link.classList.toggle('active');
+              // console.log(options);
+            })
+          });
+        }
+      }
+      else {
+      }
+
+
       // Get Image text switcher
 
       const imageSwitcher = document.querySelector('main.main > article.content .fonts > .image-option');
