--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
           expandableHeaderLinks.forEach(link => {
             // const options = link.querySelector('div.drop-down');
             link.addEventListener('click', event => {
-              event.preventDefault();
+              // event.preventDefault();
 
               if (activeLink) {
                 if (activeLink.dataset.name !== link.dataset.name) {
